testsuite/tests/typecheck/should_fail/LazyFieldsDisabled.hs
module LazyFieldsDisabled where

data A = A { lazy :: ~Int }
